Khadas VIM3 bringup.

--- a/config/targets.conf
+++ b/config/targets.conf
@@ -143,11 +143,16 @@ kvim1               current         focal       desktop                  stable 
 
 
 # Khadas Vim2
-kvim1               current         buster      cli                      stable         yes
-kvim1               current         buster      desktop                  stable         yes            xfce    config_base   browsers
-kvim1               current         focal       cli                      stable         yes
-kvim1               current         focal       desktop                  stable         yes            xfce    config_base   browsers
+kvim2               current         buster      cli                      stable         yes
+kvim2               current         buster      desktop                  stable         yes            xfce    config_base   browsers
+kvim2               current         focal       cli                      stable         yes
+kvim2               current         focal       desktop                  stable         yes            xfce    config_base   browsers
 
+# Khadas Vim3
+kvim3               current         buster      cli                      stable         yes
+kvim3               current         buster      desktop                  stable         yes            xfce    config_base   browsers
+kvim3               current         focal       cli                      stable         yes
+kvim3               current         focal       desktop                  stable         yes            xfce    config_base   browsers
 
 # La frite
 lafrite             current         buster      cli                      stable         yes
