--- a/config/sources/families/meson-g12b.conf
+++ b/config/sources/families/meson-g12b.conf
@@ -6,13 +6,13 @@ UBOOT_USE_GCC='< 4.9'
 UBOOT_TOOLCHAIN2="arm-none-eabi-:< 5.0"
 UBOOT_COMPILER="aarch64-none-elf-"
 
-BOOTSOURCE='https://github.com/hardkernel/u-boot.git'
-BOOTBRANCH='branch:odroidg12-v2015.01'
-BOOTPATCHDIR='u-boot-odroid'
-BOOTDIR='u-boot-odroid'
+BOOTSOURCE='https://github.com/khadas/khadas-uboot.git'
+BOOTBRANCH='branch:master'
+BOOTPATCHDIR='u-boot-kvim3'
+BOOTDIR='u-boot-kvim3'
 
 UBOOT_TARGET_MAP=';;sd_fuse/u-boot.bin'
-BOOTSCRIPT="boot-odroid-n2.ini:boot.ini"
+BOOTSCRIPT="boot-khadas-vim3.ini:boot.ini"
 
 CPUMIN=1000000
 CPUMAX=2400000
